--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
 <!--Footer - Start -->
 <h1 style="padding-left: 70rem;">AFİYET OLSUN</h1>
 <!--Footer - End -->
-    
+    <!--Fiplik-->
 </body>
 </html>
